Fixing text alignment for 'previous article' navigation.

--- a/static/common.css
+++ b/static/common.css
@@ -323,7 +323,8 @@ html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pr
                 width:      45%;
             }
             .article .meta .older {
-                float:  left;
+                float:      left;
+                text-align: left;
             }
             .article .meta .newer {
                 float:      right;
